--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,6 @@
     "rules": {
         "no-unused-vars": "warn",
         "no-case-declarations": "warn",
-        "react/prop-types": "warn",
-        "import/extensions": "warn"
+        "react/prop-types": "warn"
     }
 }
