--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
