--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.42",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "axios": "^0.25.0",
     "localforage": "^1.10.0",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "typescript": "^4.7.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -39,6 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^9.8.8",
     "eslint-plugin-react": "^7.28.0",
     "postcss": "^7.0.39",
