--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.42",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-redux": "^7.1.24",
     "axios": "^0.25.0",
     "localforage": "^1.10.0",
     "react": "^18.1.0",
