--- a/package.json
+++ b/package.json
@@ -4,30 +4,29 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
-    "@reduxjs/toolkit": "^1.7.1",
+    "@reduxjs/toolkit": "1.8.3",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.1",
     "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.42",
+    "@types/node": "18.0.3",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-redux": "^7.1.24",
-    "axios": "^0.25.0",
     "localforage": "^1.10.0",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
+    "react-redux": "8.0.2",
+    "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js"
   },
@@ -47,9 +46,10 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/uuid": "^8.3.4",
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.7",
     "eslint-plugin-react": "^7.28.0",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5",
+    "ts-jest": "^28.0.5"
   }
 }
