--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest -c jest.config.js --watch",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.(ts|tsx)"
   },
   "browserslist": {
     "production": [
@@ -46,7 +46,9 @@
     "@types/react-dom": "^18.0.5",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5",
     "ts-jest": "^28.0.5"
