--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: yarn install --frozen-lockfile 
-    - run: yarn test
+        cache-dependency-path: "src/main/frontend/yarn.lock"
+    - name: Install Frontend Dependencies
+      run: yarn install --frozen-lockfile 
+      working-directory: src/main/frontend
+    - name: Run Jest Tests
+      run: yarn test
+      working-directory: src/main/frontend
