Added flyway to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/tcdb
 spring.datasource.username=dev
 spring.datasource.password=dev
+
+spring.flyway.user=dev
+spring.flyway.password=dev
+spring.flyway.schemas=tc
+spring.flyway.url=jdbc:postgresql://localhost:5432/tcdb
