Added gradle tasks to build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,10 @@
-name: Frontend CI
+name: Build CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: "*"
 
 jobs:
-  build:
-
+  build-frontend:
     runs-on: ubuntu-latest
 
     strategy:
@@ -17,15 +13,48 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: "src/main/frontend/yarn.lock"
+    
     - name: Install Frontend Dependencies
       run: yarn install --frozen-lockfile 
       working-directory: src/main/frontend
+  
+  frontent-test:
+    needs: build-frontend
+    runs-on: ubuntu-latest
+    steps:
     - name: Run Jest Tests
       run: yarn test
       working-directory: src/main/frontend
+
+  build-backend:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout project sources
+      uses: actions/checkout@v2
+    
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    
+    - name: Gradle Build
+      run: ./gradlew build
+
+  kotlin-test:
+    needs: build-backend
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run Tests
+      run: ./gradlew test
+  
+  kotlin-integration-test:
+    needs: build-backend
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run Integration Tests
+      run: ./gradlew integrationTest
