--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,14 +31,19 @@ jobs:
   build-backend:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout project sources
-      uses: actions/checkout@v2
-    
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-    
-    - name: Gradle Build
-      run: ./gradlew build
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: build
+
+    - name: Grant Permissions to gradlew
+      run: chmod +x gradlew
 
     - name: Run Tests
       run: ./gradlew test
